--- a/github/workflows/game.ipynb
+++ b/github/workflows/game.ipynb
@@ -90,6 +90,31 @@
    "source": [
     "#main game and player menu/start up"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Traceback (most recent call last):\n",
+       "  File \"c:\\Users\\19512\\.vscode\\extensions\\ms-python.python-2025.2.0-win32-x64\\python_files\\python_server.py\", line 133, in exec_user_input\n",
+       "    retval = callable_(user_input, user_globals)\n",
+       "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+       "  File \"<string>\", line 152\n",
+       "    galaxy.planets[planet_choice = 1].explore(player)\n",
+       "                   ^^^^^^^^^^^^^^^^^\n",
+       "SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
