--- a/Final Game.ipynb
+++ b/Final Game.ipynb
@@ -9,7 +9,7 @@
     "import random\n",
     "import json\n",
     "import os\n",
-    "\n",
+    "#creating your player\n",
     "class Player:\n",
     "    def __init__(self, name, inventory = None, health=100, level=1, credits=100):\n",
     "        self.name = name\n",
@@ -44,6 +44,7 @@
     "    def add_to_inventory(self, item):\n",
     "        self.inventory.append(item)\n",
     "        print(f\"you picked up: {item}\")\n",
+    "   #saving player profile to dictionary\n",
     "    def to_dict(self):\n",
     "        return {\n",
     "            \"name\": self.name, \n",
@@ -62,7 +63,7 @@
     "    \n",
     "    def describe_planet(self):\n",
     "        print(f\"{self.name} is a mysterious planet with a difficulty of {self.difficulty}.\")\n",
-    "    \n",
+    "    #option to choose fight or not\n",
     "    def explore(self, player):\n",
     "        print(f\"You have arrived on {self.name} (With a difficulty of: {self.difficulty})\")\n",
     "        if random.random() < 0.5:\n",
@@ -106,7 +107,7 @@
     "        else:\n",
     "            print(\"Invalid action, The monster is eating you!\")\n",
     "            player.take_damage(20)\n",
-    "    \n",
+    "    #this is where player gets to fight monster while showing monster and player health and attack points\n",
     "    def fight_monster(self, player, monster):\n",
     "        monster_health = random.randint(30, 50)\n",
     "        monster_reward = random.randint(20, 100)\n",
@@ -185,7 +186,7 @@
     "            print(f\"{i}. {planet.name} (Difficulty: {planet.difficulty})\")\n",
     "#need save and load functions\n",
     "#use player_inventory.json for save and load\n",
-    "\n",
+    "#a shope where you can buy upgrades and enhance inventory\n",
     "class SpaceShop:\n",
     "    def __init__(self):\n",
     "        self.items = {\n",
@@ -222,7 +223,7 @@
     "        print(\"\\nGame save Successful\")\n",
     "    except Exception as e:\n",
     "        print(f\"\\nError saving game: {e}\")\n",
-    "\n",
+    "#load in previously saved game from created json file\n",
     "def load_game():\n",
     "    save_files = [f for f in os.listdir() if f.startswith(\"player_\") and f.endswith(\".json\")]\n",
     "    if not save_files:\n",
@@ -256,7 +257,7 @@
     "    except Exception as e:\n",
     "        print(f\"\\nError loading game: {e}\")\n",
     "        return None\n",
-    "        \n",
+    "#to load in previously saved inventory        \n",
     "def load_inventory():\n",
     "    try:\n",
     "        with open('player_inventory.json', 'r') as file:\n",
@@ -272,6 +273,7 @@
     "        json.dump(inventory, file)\n",
     "    print(\"Inventory saved.\")\n",
     "\n",
+    "#this where it shows player status and game menu options\n",
     "def play_game(player, galaxy, shop):\n",
     "    while True:\n",
     "        print(\"\\n=== Player Status ===\")\n",
@@ -311,7 +313,7 @@
     "            shop.buy_item(player)\n",
     "        else:\n",
     "            print(\"\\nInvalid option. Try again.\")\n",
-    "            \n",
+    " #main game with menu options           \n",
     "def main():\n",
     "    print(\"Welcome to galaxy explore!\")\n",
     "    \n",
